--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -5,6 +5,7 @@ desugar_jdk_libs = "2.1.5"
 orchestrator = "1.5.1"
 minSdk = "23"
 targetSdk = "35"
+publishVersion = "0.0.4-local"
 
 # Used below in dependency definitions
 # Compose and Accompanist versions are linked
@@ -21,7 +22,7 @@ androidxActivityCompose = "1.10.1"
 androidxAppCompat = "1.7.1"
 androidxAnnotation = "1.7.1"
 androidxBenchmark = "1.3.4"
-androidxCamera = "1.6.0-alpha01"
+androidxCamera = "1.6.0-alpha02"
 androidxConcurrentFutures = "1.3.0"
 androidxCoreKtx = "1.16.0"
 androidxDatastore = "1.1.7"
